--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel": "^6.23.0",
+    "p5": "^0.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-p5-wrapper": "^2.0.0",
+    "react-scripts": "3.0.1",
+    "react-web-tabs": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "yarn run build && s3cmd sync --delete-removed ./build/* s3://kipja.com && s3cmd put -m \"text/css\" build/static/css/*.css s3://kipja.com/static/css/ && echo '🚀  Deployed!'"
   },
   "eslintConfig": {
     "extends": "react-app"
